category media done
category media done

--- a/kor/trend_library/detail.html
+++ b/kor/trend_library/detail.html
@@ -146,7 +146,7 @@ include "../../include/dbconn.html";
                 <div class="detail_body">
                     <div class="navi">
 
-                        <a href="javascript:;" onclick="history.back()"><img src="../images/common/ico_arrow_05.svg" alt="move to prev page"></a>
+                        <a id="backNavi" href="javascript:;" onclick="history.back()"><img src="../images/common/ico_arrow_05.svg" alt="move to prev page"></a>
 
                         <ul class="lang">
                             <li><a href="" class="active">KOR</a></li>
