--- a/kor/trend_library/list.html
+++ b/kor/trend_library/list.html
@@ -135,7 +135,7 @@ include "../../include/dbconn.html";
         </nav>
     </header>
 
-    <main class="sub_page list" id="trend_library">
+    <main class="sub_page list cType_01" id="trend_library">
         <section>
             <article>
                 <div class="sec_tit">
