--- a/kor/portfolio/detail.html
+++ b/kor/portfolio/detail.html
@@ -82,13 +82,8 @@ include "../../include/dbconn.html";
                 <li>
                     <a href="../category/list.html">Category</a>
                 </li>
-                <li>
-                    <a href="#none">Portfolio</a>
-                </li>
-                <li>
-                    <a href="#none">Contact</a>
-                </li>
-
+                <li><a href="../portfolio/list.html">Portfolio</a></li>
+                <li><a href="../contact/inquiry.html">Contact</a></li>
             </ul>
 
 
@@ -121,7 +116,7 @@ include "../../include/dbconn.html";
                             <li><a href="../trend_library/list.html">Trend Library</a></li>
                             <li><a href="../category/list.html">Category</a></li>
                             <li><a href="../portfolio/list.html">Portfolio</a></li>
-                            <li><a href="">Contact</a></li>
+                            <li><a href="../contact/inquiry.html">Contact</a></li>
                         </ul>
                         <ul class="user_depth">
                             <li><a href="">My account</a></li>
@@ -134,7 +129,7 @@ include "../../include/dbconn.html";
 
         </nav>
     </header>
-
+    
     <main class="sub_page detail" id="category">
         <section>
             <article>
