--- a/kor/portfolio/list.html
+++ b/kor/portfolio/list.html
@@ -62,6 +62,7 @@ include "../../include/dbconn.html";
 
 <body>
 
+
     <header id="header">
         <nav id="header_wrap">
 
@@ -82,13 +83,8 @@ include "../../include/dbconn.html";
                 <li>
                     <a href="../category/list.html">Category</a>
                 </li>
-                <li>
-                    <a href="#none">Portfolio</a>
-                </li>
-                <li>
-                    <a href="#none">Contact</a>
-                </li>
-
+                <li><a href="../portfolio/list.html">Portfolio</a></li>
+                <li><a href="../contact/inquiry.html">Contact</a></li>
             </ul>
 
 
@@ -121,7 +117,7 @@ include "../../include/dbconn.html";
                             <li><a href="../trend_library/list.html">Trend Library</a></li>
                             <li><a href="../category/list.html">Category</a></li>
                             <li><a href="../portfolio/list.html">Portfolio</a></li>
-                            <li><a href="">Contact</a></li>
+                            <li><a href="../contact/inquiry.html">Contact</a></li>
                         </ul>
                         <ul class="user_depth">
                             <li><a href="">My account</a></li>
@@ -134,99 +130,88 @@ include "../../include/dbconn.html";
 
         </nav>
     </header>
-
-    <main class="sub_page list_detail cType_01" id="category">
+    <main class="sub_page list" id="portfolio">
         <section>
             <article>
                 <div class="sec_tit">
-                    <div class="mo_tit">
-                        <h2>nowLoction</h2>
-                    </div>
                     <div class="nav_location">
-                        <h2>Category</h2>
-                        <h2>nowLoction</h2>
+                        <h2>Portfolio</h2>
+                        <ul>
+                            <li><a class="active" href="?f_class=All">All</a></li>
+                            <li><a href="?f_class=Cosmteics">Cosmteics</a></li>
+                            <li><a href="?f_class=Electrinocs">Electrinocs</a></li>
+                            <li><a href="?f_class=Automotive">Automotive</a></li>
+                            <li><a href="?f_class=Others">Others</a></li>
+                        </ul>
                     </div>
                 </div>
 
                 <div class="content_wrap">
 
-                    <div class="con con_01">
+                    <div class="con">
                         <ul>
                             <li>
-                                <a href="./detail.html">
+                                <a href="#none">
                                     <figure>
-                                        <div class="img_wrap"><img src="../images/category/m_01.png" alt=""></div>
-                                        <div class="text_wrap">
-                                            <figcaption>
-                                                <p class="top"><span>Sustainable</span></p>
-                                                <p class="bottom">Vibrant Ocean Vibrant Ocean Vibrant Ocean Vibrant Ocean Vibrant Ocean Vibrant OceanVibrant Ocean Vibrant Ocean Vibrant Ocean Vibrant Ocean Vibrant Ocean Vibrant ...</p>
-                                                <p class="arrow"><img src="../images/common/ico_arrow_04.svg" alt=""></p>
-                                            </figcaption>
-                                        </div>
+                                        <div class="img_wrap"><img src="../images/portfolio/image 48.png" alt=""></div>
+                                        <figcaption>
+                                            YSL Over rose collector 22’ / Loreal
+                                        </figcaption>
                                     </figure>
                                 </a>
                             </li>
                             <li>
-                                <a href="./detail.html">
+                                <a href="#none">
                                     <figure>
-                                        <div class="img_wrap"><img src="../images/category/m_02.png" alt=""></div>
-                                        <div class="text_wrap">
-                                            <figcaption>
-                                                <p class="top"><span>Plastic</span></p>
-                                                <p class="bottom">Vibrant Ocean Vibrant Ocean Vibrant Ocean Vibrant Ocean Vibrant Ocean Vibrant OceanVibrant Ocean Vibrant Ocean Vibrant Ocean Vibrant Ocean Vibrant Ocean Vibrant ...</p>
-                                                <p class="arrow"><img src="../images/common/ico_arrow_04.svg" alt=""></p>
-                                            </figcaption>
-                                        </div>
+                                        <div class="img_wrap"><img src="../images/portfolio/image 49.png" alt=""></div>
+                                        <figcaption>
+                                            Plastic
+                                        </figcaption>
                                     </figure>
                                 </a>
                             </li>
                             <li>
-                                <a href="./detail.html">
+                                <a href="#none">
                                     <figure>
-                                        <div class="img_wrap"><img src="../images/category/m_03.png" alt=""></div>
-                                        <div class="text_wrap">
-                                            <figcaption>
-                                                <p class="top"><span>Metal</span></p>
-                                                <p class="arrow"><img src="../images/common/ico_arrow_04.svg" alt=""></p>
-                                            </figcaption>
-                                        </div>
+                                        <div class="img_wrap"><img src="../images/portfolio/image 50.png" alt=""></div>
+                                        <figcaption>
+                                            Side chair | Confidential
+                                        </figcaption>
                                     </figure>
                                 </a>
                             </li>
                             <li>
-                                <a href="">
+                                <a href="#none">
                                     <figure>
-                                        <div class="img_wrap"><img src="../images/category/t_01.png" alt=""></div>
-                                        <div class="text_wrap">
-                                            <figcaption>
-                                                <p class="top"><span>title</span></p>
-                                                <p class="arrow"><img src="../images/common/ico_arrow_04.svg" alt=""></p>
-                                            </figcaption>
-                                        </div>
+                                        <div class="img_wrap"><img src="../images/portfolio/image 51.png" alt=""></div>
+                                        <figcaption>
+                                            Side chair | Confidential
+                                        </figcaption>
                                     </figure>
                                 </a>
                             </li>
                             <li>
-                                <a href="">
+                                <a href="#none">
                                     <figure>
-                                        <div class="img_wrap"><img src="../images/category/banner_01.png" alt=""></div>
-                                        <div class="text_wrap">
-                                            <figcaption>
-                                                <p class="top"><span>title</span></p>
-                                                <p class="bottom">content</p>
-                                                <p class="arrow"><img src="../images/common/ico_arrow_04.svg" alt=""></p>
-                                            </figcaption>
-                                        </div>
+                                        <div class="img_wrap"><img src="../images/portfolio/image 52.png" alt=""></div>
+                                        <figcaption>
+                                            Side chair | Confidential
+                                        </figcaption>
+                                    </figure>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#none">
+                                    <figure>
+                                        <div class="img_wrap"><img src="../images/portfolio/image 53.png" alt=""></div>
+                                        <figcaption>
+                                            Side chair | Confidential
+                                        </figcaption>
                                     </figure>
                                 </a>
                             </li>
                         </ul>
                     </div>
-
-                    <div class="btn more">
-                        <a href="javascript:;" php-data='클릭시 다보여주기' onclick="alert('클릭시 more')">Click here to see more</a>
-                    </div>
-
                 </div>
 
             </article>
