--- a/kor/trend_library/list_detail.html
+++ b/kor/trend_library/list_detail.html
@@ -120,7 +120,7 @@ include "../../include/dbconn.html";
                             <li><a href="../cmf_library/list.html">CMF Library</a></li>
                             <li><a href="../trend_library/list.html">Trend Library</a></li>
                             <li><a href="../category/list.html">Category</a></li>
-                            <li><a href="">Portfolio</a></li>
+                            <li><a href="../portfolio/list.html">Portfolio</a></li>
                             <li><a href="">Contact</a></li>
                         </ul>
                         <ul class="user_depth">
