--- a/kor/portfolio/list.html
+++ b/kor/portfolio/list.html
@@ -151,7 +151,7 @@ include "../../include/dbconn.html";
                     <div class="con">
                         <ul>
                             <li>
-                                <a href="#none">
+                                <a href="./detail.html">
                                     <figure>
                                         <div class="img_wrap"><img src="../images/portfolio/image 48.png" alt=""></div>
                                         <figcaption>
@@ -161,7 +161,7 @@ include "../../include/dbconn.html";
                                 </a>
                             </li>
                             <li>
-                                <a href="#none">
+                                <a href="./detail.html">
                                     <figure>
                                         <div class="img_wrap"><img src="../images/portfolio/image 49.png" alt=""></div>
                                         <figcaption>
@@ -171,7 +171,7 @@ include "../../include/dbconn.html";
                                 </a>
                             </li>
                             <li>
-                                <a href="#none">
+                                <a href="./detail.html">
                                     <figure>
                                         <div class="img_wrap"><img src="../images/portfolio/image 50.png" alt=""></div>
                                         <figcaption>
@@ -181,7 +181,7 @@ include "../../include/dbconn.html";
                                 </a>
                             </li>
                             <li>
-                                <a href="#none">
+                                <a href="./detail.html">
                                     <figure>
                                         <div class="img_wrap"><img src="../images/portfolio/image 51.png" alt=""></div>
                                         <figcaption>
@@ -191,7 +191,7 @@ include "../../include/dbconn.html";
                                 </a>
                             </li>
                             <li>
-                                <a href="#none">
+                                <a href="./detail.html">
                                     <figure>
                                         <div class="img_wrap"><img src="../images/portfolio/image 52.png" alt=""></div>
                                         <figcaption>
@@ -201,7 +201,7 @@ include "../../include/dbconn.html";
                                 </a>
                             </li>
                             <li>
-                                <a href="#none">
+                                <a href="./detail.html">
                                     <figure>
                                         <div class="img_wrap"><img src="../images/portfolio/image 53.png" alt=""></div>
                                         <figcaption>
