my_library popup
my_library popup

--- a/kor/cmf_library/list.html
+++ b/kor/cmf_library/list.html
@@ -73,22 +73,11 @@ include "../../include/dbconn.html";
             <!-- HEADER_CENTER -->
             <ul id="header_center">
 
-                <li>
-                    <a href="../cmf_library/list.html">CMF Library</a>
-                </li>
-                <li>
-                    <a href="../trend_library/list.html">Trend Library</a>
-                </li>
-                <li>
-                    <a href="../category/list.html">Category</a>
-                </li>
-                <li>
-                    <a href="#none">Portfolio</a>
-                </li>
-                <li>
-                    <a href="#none">Contact</a>
-                </li>
-
+                <li><a href="../cmf_library/list.html">CMF Library</a></li>
+                <li><a href="../trend_library/list.html">Trend Library</a></li>
+                <li><a href="../category/list.html">Category</a></li>
+                <li><a href="../portfolio/list.html">Portfolio</a></li>
+                <li><a href="../contact/inquiry.html">Contact</a></li>
             </ul>
 
 
@@ -120,8 +109,8 @@ include "../../include/dbconn.html";
                             <li><a href="../cmf_library/list.html">CMF Library</a></li>
                             <li><a href="../trend_library/list.html">Trend Library</a></li>
                             <li><a href="../category/list.html">Category</a></li>
-                            <li><a href="">Portfolio</a></li>
-                            <li><a href="">Contact</a></li>
+                            <li><a href="../portfolio/list.html">Portfolio</a></li>
+                            <li><a href="../contact/inquiry.html">Contact</a></li>
                         </ul>
                         <ul class="user_depth">
                             <li><a href="">My account</a></li>
@@ -130,8 +119,6 @@ include "../../include/dbconn.html";
                     </nav>
                 </article>
             </div>
-
-
         </nav>
     </header>
 
