--- a/kor/portfolio/detail.html
+++ b/kor/portfolio/detail.html
@@ -73,15 +73,9 @@ include "../../include/dbconn.html";
             <!-- HEADER_CENTER -->
             <ul id="header_center">
 
-                <li>
-                    <a href="../cmf_library/list.html">CMF Library</a>
-                </li>
-                <li>
-                    <a href="../trend_library/list.html">Trend Library</a>
-                </li>
-                <li>
-                    <a href="../category/list.html">Category</a>
-                </li>
+                <li><a href="../cmf_library/list.html">CMF Library</a></li>
+                <li><a href="../trend_library/list.html">Trend Library</a></li>
+                <li><a href="../category/list.html">Category</a></li>
                 <li><a href="../portfolio/list.html">Portfolio</a></li>
                 <li><a href="../contact/inquiry.html">Contact</a></li>
             </ul>
@@ -125,8 +119,6 @@ include "../../include/dbconn.html";
                     </nav>
                 </article>
             </div>
-
-
         </nav>
     </header>
 
