my_library tab style clone
my_library tab style clone

--- a/kor/member/my_library.html
+++ b/kor/member/my_library.html
@@ -36,8 +36,6 @@ include "../../include/dbconn.html";
 
 <title>hida - Color Material Finish specialists (히다랩)</title>
 
-
-
 <!-- --------------------CSS-------------------- -->
 <link rel="stylesheet" href="../css/swiper.css">
 <link rel="stylesheet" href="../css/aos.css">
@@ -123,7 +121,7 @@ include "../../include/dbconn.html";
     </header>
 
 
-    <main class="sub_page" id="cmf_library">
+    <main class="sub_page" id="my_library">
         <section>
             <article>
                 <div class="sec_tit">
@@ -145,6 +143,9 @@ include "../../include/dbconn.html";
 
 
                 <div class="content">
+                    <div>
+                        
+                    </div>
                 </div>
 
             </article>
