--- a/kor/member/my_library.html
+++ b/kor/member/my_library.html
@@ -143,9 +143,11 @@ include "../../include/dbconn.html";
 
 
                 <div class="content">
-                    <div>
-                        
-                    </div>
+                    <dl>
+                        <dt>CMF List</dt>
+                        <dd></dd>
+                    </dl>
+                    
                 </div>
 
             </article>
