mylibrary media start
mylibrary media start

--- a/kor/member/my_library.html
+++ b/kor/member/my_library.html
@@ -132,24 +132,145 @@ include "../../include/dbconn.html";
                         </ul>
                     </div>
 
-                    <!-- 
                     <div id="hidden_tab">
-                        <div class="selected_tab active">
+                        <div class="selected_tab">
+                            <a href="javascript:;" class="active">All</a>
+                            <a href="javascript:;">CMF List</a>
+                            <a href="javascript:;">Trend List</a>
                         </div>
                     </div>
-                    -->
 
                 </div>
 
 
                 <div class="content">
-                    <dl>
-                        <dt>CMF List</dt>
-                        <dd></dd>
-                    </dl>
-                    
-                </div>
+                    <div class="list_wrap active">
+                        <h2>CMF List</h2>
 
+                        <div class="board_wrap swiper-container">
+                            <ul class="swiper-wrapper">
+                                <li class="swiper-slide"><a href="#phpdata"><img src="../images/cmf/image 34.png" alt=""></a></li>
+                                <li class="swiper-slide"><a href="#phpdata"><img src="../images/cmf/image 35.png" alt=""></a></li>
+                                <li class="swiper-slide"><a href="#phpdata"><img src="../images/cmf/image 36.png" alt=""></a></li>
+                                <li class="swiper-slide"><a href="#phpdata"><img src="../images/cmf/image 37.png" alt=""></a></li>
+                                <li class="swiper-slide"><a href="#phpdata"><img src="../images/cmf/image 38.png" alt=""></a></li>
+                                <li class="swiper-slide"><a href="#phpdata"><img src="../images/cmf/image 34.png" alt=""></a></li>
+                            </ul>
+                            <dl>
+                                <dt>
+                                    My Board Name Area
+                                    <h3>CMFs : 4</h3>
+                                </dt>
+                                <dd>
+
+                                    <p>
+                                        <a href="javascript:;" id="myLibrarayEdit">Edit</a>
+                                        <a href="javascript:;" id="myLibrarayDelete">Delete</a>
+                                    </p>
+                                </dd>
+                            </dl>
+                        </div>
+
+                        <div class="board_wrap swiper-container">
+                            <ul class="swiper-wrapper">
+                                <li class="swiper-slide"><a href="#phpdata"><img src="../images/cmf/image 34.png" alt=""></a></li>
+                                <li class="swiper-slide"><a href="#phpdata"><img src="../images/cmf/image 35.png" alt=""></a></li>
+                                <li class="swiper-slide"><a href="#phpdata"><img src="../images/cmf/image 36.png" alt=""></a></li>
+                                <li class="swiper-slide"><a href="#phpdata"><img src="../images/cmf/image 37.png" alt=""></a></li>
+                                <li class="swiper-slide"><a href="#phpdata"><img src="../images/cmf/image 38.png" alt=""></a></li>
+                                <li class="swiper-slide"><a href="#phpdata"><img src="../images/cmf/image 34.png" alt=""></a></li>
+                            </ul>
+                            <dl>
+                                <dt>
+                                    My Board Name Area
+                                    <h3>CMFs : 4</h3>
+                                </dt>
+                                <dd>
+
+                                    <p>
+                                        <a href="javascript:;" id="myLibrarayEdit">Edit</a>
+                                        <a href="javascript:;" id="myLibrarayDelete">Delete</a>
+                                    </p>
+                                </dd>
+                            </dl>
+                        </div>
+
+                    </div>
+
+                    <div class="list_wrap active">
+                        <h2>Trend List</h2>
+
+                        <div class="board_wrap swiper-container">
+                            <ul class="swiper-wrapper">
+                                <li class="swiper-slide"><a href="#phpdata"><img src="../images/trend/cmf_01.png" alt=""></a></li>
+                                <li class="swiper-slide"><a href="#phpdata"><img src="../images/trend/cmf_02.png" alt=""></a></li>
+                                <li class="swiper-slide"><a href="#phpdata"><img src="../images/trend/cmf_03.png" alt=""></a></li>
+                                <li class="swiper-slide"><a href="#phpdata"><img src="../images/trend/mood_01.png" alt=""></a></li>
+                                <li class="swiper-slide"><a href="#phpdata"><img src="../images/trend/mood_02.png" alt=""></a></li>
+                                <li class="swiper-slide"><a href="#phpdata"><img src="../images/trend/mood_03.png" alt=""></a></li>
+                            </ul>
+                            <dl>
+                                <dt>
+                                    My Board Name Area
+                                    <h3>CMFs : 4</h3>
+                                </dt>
+                                <dd>
+                                    <p>
+                                        <a href="javascript:;" id="myLibrarayEdit">Edit</a>
+                                        <a href="javascript:;" id="myLibrarayDelete">Delete</a>
+                                    </p>
+                                </dd>
+                            </dl>
+                        </div>
+
+
+                        <div class="board_wrap swiper-container">
+                            <ul class="swiper-wrapper">
+                                <li class="swiper-slide"><a href="#phpdata"><img src="../images/trend/cmf_01.png" alt=""></a></li>
+                                <li class="swiper-slide"><a href="#phpdata"><img src="../images/trend/cmf_02.png" alt=""></a></li>
+                                <li class="swiper-slide"><a href="#phpdata"><img src="../images/trend/cmf_03.png" alt=""></a></li>
+                                <li class="swiper-slide"><a href="#phpdata"><img src="../images/trend/mood_01.png" alt=""></a></li>
+                                <li class="swiper-slide"><a href="#phpdata"><img src="../images/trend/mood_02.png" alt=""></a></li>
+                                <li class="swiper-slide"><a href="#phpdata"><img src="../images/trend/mood_03.png" alt=""></a></li>
+                            </ul>
+                            <dl>
+                                <dt>
+                                    My Board Name Area
+                                    <h3>CMFs : 4</h3>
+                                </dt>
+                                <dd>
+                                    <p>
+                                        <a href="javascript:;" id="myLibrarayEdit">Edit</a>
+                                        <a href="javascript:;" id="myLibrarayDelete">Delete</a>
+                                    </p>
+                                </dd>
+                            </dl>
+                        </div>
+
+                        <div class="board_wrap swiper-container">
+                            <ul class="swiper-wrapper">
+                                <li class="swiper-slide"><a href="#phpdata"><img src="../images/trend/cmf_01.png" alt=""></a></li>
+                                <li class="swiper-slide"><a href="#phpdata"><img src="../images/trend/cmf_02.png" alt=""></a></li>
+                                <li class="swiper-slide"><a href="#phpdata"><img src="../images/trend/cmf_03.png" alt=""></a></li>
+                                <li class="swiper-slide"><a href="#phpdata"><img src="../images/trend/mood_01.png" alt=""></a></li>
+                                <li class="swiper-slide"><a href="#phpdata"><img src="../images/trend/mood_02.png" alt=""></a></li>
+                                <li class="swiper-slide"><a href="#phpdata"><img src="../images/trend/mood_03.png" alt=""></a></li>
+                            </ul>
+                            <dl>
+                                <dt>
+                                    My Board Name Area
+                                    <h3>CMFs : 4</h3>
+                                </dt>
+                                <dd>
+                                    <p>
+                                        <a href="javascript:;" id="myLibrarayEdit">Edit</a>
+                                        <a href="javascript:;" id="myLibrarayDelete">Delete</a>
+                                    </p>
+                                </dd>
+                            </dl>
+                        </div>
+                    </div>
+                </div>
             </article>
         </section>
     </main>
@@ -209,8 +330,6 @@ include "../../include/dbconn.html";
         </article>
     </footer>
 
-
-
     <aside id="popup_myLibrary" class="popup">
         <article>
             <div class="form_wrap">
@@ -239,6 +358,19 @@ include "../../include/dbconn.html";
         $('#tab_add').click(function() {
             $('#popup_myLibrary').addClass('active');
         })
+        $('#my_library .selected_tab a').on('click',function(){
+            let idx = $(this).index();
+            console.log(idx);
+            $('#my_library .selected_tab a').removeClass('active');
+            $(this).addClass('active');
+
+
+            $('.content > div').removeClass('active');
+            $('.content > div').eq(idx-1).addClass('active');
+            if(idx == 0 ) {
+                $('.content > div').addClass('active');
+            }
+        })
 
         // common
         // popup
@@ -255,8 +387,6 @@ include "../../include/dbconn.html";
         $('#btn_pop_close').click(function() {
             $(this).parents('.popup').removeClass('active');
         });
-
-
     </script>
     <!-- --------------------------- MAIN --------------------------- -->
 
