--- a/kor/member/my_library.html
+++ b/kor/member/my_library.html
@@ -149,12 +149,12 @@ include "../../include/dbconn.html";
 
                         <div class="board_wrap swiper-container">
                             <ul class="swiper-wrapper">
-                                <li class="swiper-slide"><a href="#phpdata"><img src="../images/cmf/image 34.png" alt=""></a></li>
-                                <li class="swiper-slide"><a href="#phpdata"><img src="../images/cmf/image 35.png" alt=""></a></li>
-                                <li class="swiper-slide"><a href="#phpdata"><img src="../images/cmf/image 36.png" alt=""></a></li>
-                                <li class="swiper-slide"><a href="#phpdata"><img src="../images/cmf/image 37.png" alt=""></a></li>
-                                <li class="swiper-slide"><a href="#phpdata"><img src="../images/cmf/image 38.png" alt=""></a></li>
-                                <li class="swiper-slide"><a href="#phpdata"><img src="../images/cmf/image 34.png" alt=""></a></li>
+                                <li class="swiper-slide"><a href="#phpdata"><img loading="lazy" src="../images/cmf/image 34.png" alt=""></a></li>
+                                <li class="swiper-slide"><a href="#phpdata"><img loading="lazy" src="../images/cmf/image 35.png" alt=""></a></li>
+                                <li class="swiper-slide"><a href="#phpdata"><img loading="lazy" src="../images/cmf/image 36.png" alt=""></a></li>
+                                <li class="swiper-slide"><a href="#phpdata"><img loading="lazy" src="../images/cmf/image 37.png" alt=""></a></li>
+                                <li class="swiper-slide"><a href="#phpdata"><img loading="lazy" src="../images/cmf/image 38.png" alt=""></a></li>
+                                <li class="swiper-slide"><a href="#phpdata"><img loading="lazy" src="../images/cmf/image 34.png" alt=""></a></li>
                             </ul>
                             <dl>
                                 <dt>
@@ -173,12 +173,12 @@ include "../../include/dbconn.html";
 
                         <div class="board_wrap swiper-container">
                             <ul class="swiper-wrapper">
-                                <li class="swiper-slide"><a href="#phpdata"><img src="../images/cmf/image 34.png" alt=""></a></li>
-                                <li class="swiper-slide"><a href="#phpdata"><img src="../images/cmf/image 35.png" alt=""></a></li>
-                                <li class="swiper-slide"><a href="#phpdata"><img src="../images/cmf/image 36.png" alt=""></a></li>
-                                <li class="swiper-slide"><a href="#phpdata"><img src="../images/cmf/image 37.png" alt=""></a></li>
-                                <li class="swiper-slide"><a href="#phpdata"><img src="../images/cmf/image 38.png" alt=""></a></li>
-                                <li class="swiper-slide"><a href="#phpdata"><img src="../images/cmf/image 34.png" alt=""></a></li>
+                                <li class="swiper-slide"><a href="#phpdata"><img loading="lazy" src="../images/cmf/image 34.png" alt=""></a></li>
+                                <li class="swiper-slide"><a href="#phpdata"><img loading="lazy" src="../images/cmf/image 35.png" alt=""></a></li>
+                                <li class="swiper-slide"><a href="#phpdata"><img loading="lazy" src="../images/cmf/image 36.png" alt=""></a></li>
+                                <li class="swiper-slide"><a href="#phpdata"><img loading="lazy" src="../images/cmf/image 37.png" alt=""></a></li>
+                                <li class="swiper-slide"><a href="#phpdata"><img loading="lazy" src="../images/cmf/image 38.png" alt=""></a></li>
+                                <li class="swiper-slide"><a href="#phpdata"><img loading="lazy" src="../images/cmf/image 34.png" alt=""></a></li>
                             </ul>
                             <dl>
                                 <dt>
@@ -202,12 +202,12 @@ include "../../include/dbconn.html";
 
                         <div class="board_wrap swiper-container">
                             <ul class="swiper-wrapper">
-                                <li class="swiper-slide"><a href="#phpdata"><img src="../images/trend/cmf_01.png" alt=""></a></li>
-                                <li class="swiper-slide"><a href="#phpdata"><img src="../images/trend/cmf_02.png" alt=""></a></li>
-                                <li class="swiper-slide"><a href="#phpdata"><img src="../images/trend/cmf_03.png" alt=""></a></li>
-                                <li class="swiper-slide"><a href="#phpdata"><img src="../images/trend/mood_01.png" alt=""></a></li>
-                                <li class="swiper-slide"><a href="#phpdata"><img src="../images/trend/mood_02.png" alt=""></a></li>
-                                <li class="swiper-slide"><a href="#phpdata"><img src="../images/trend/mood_03.png" alt=""></a></li>
+                                <li class="swiper-slide"><a href="#phpdata"><img loading="lazy" src="../images/trend/cmf_01.png" alt=""></a></li>
+                                <li class="swiper-slide"><a href="#phpdata"><img loading="lazy" src="../images/trend/cmf_02.png" alt=""></a></li>
+                                <li class="swiper-slide"><a href="#phpdata"><img loading="lazy" src="../images/trend/cmf_03.png" alt=""></a></li>
+                                <li class="swiper-slide"><a href="#phpdata"><img loading="lazy" src="../images/trend/mood_01.png" alt=""></a></li>
+                                <li class="swiper-slide"><a href="#phpdata"><img loading="lazy" src="../images/trend/mood_02.png" alt=""></a></li>
+                                <li class="swiper-slide"><a href="#phpdata"><img loading="lazy" src="../images/trend/mood_03.png" alt=""></a></li>
                             </ul>
                             <dl>
                                 <dt>
@@ -226,12 +226,12 @@ include "../../include/dbconn.html";
 
                         <div class="board_wrap swiper-container">
                             <ul class="swiper-wrapper">
-                                <li class="swiper-slide"><a href="#phpdata"><img src="../images/trend/cmf_01.png" alt=""></a></li>
-                                <li class="swiper-slide"><a href="#phpdata"><img src="../images/trend/cmf_02.png" alt=""></a></li>
-                                <li class="swiper-slide"><a href="#phpdata"><img src="../images/trend/cmf_03.png" alt=""></a></li>
-                                <li class="swiper-slide"><a href="#phpdata"><img src="../images/trend/mood_01.png" alt=""></a></li>
-                                <li class="swiper-slide"><a href="#phpdata"><img src="../images/trend/mood_02.png" alt=""></a></li>
-                                <li class="swiper-slide"><a href="#phpdata"><img src="../images/trend/mood_03.png" alt=""></a></li>
+                                <li class="swiper-slide"><a href="#phpdata"><img loading="lazy" src="../images/trend/cmf_01.png" alt=""></a></li>
+                                <li class="swiper-slide"><a href="#phpdata"><img loading="lazy" src="../images/trend/cmf_02.png" alt=""></a></li>
+                                <li class="swiper-slide"><a href="#phpdata"><img loading="lazy" src="../images/trend/cmf_03.png" alt=""></a></li>
+                                <li class="swiper-slide"><a href="#phpdata"><img loading="lazy" src="../images/trend/mood_01.png" alt=""></a></li>
+                                <li class="swiper-slide"><a href="#phpdata"><img loading="lazy" src="../images/trend/mood_02.png" alt=""></a></li>
+                                <li class="swiper-slide"><a href="#phpdata"><img loading="lazy" src="../images/trend/mood_03.png" alt=""></a></li>
                             </ul>
                             <dl>
                                 <dt>
@@ -249,12 +249,12 @@ include "../../include/dbconn.html";
 
                         <div class="board_wrap swiper-container">
                             <ul class="swiper-wrapper">
-                                <li class="swiper-slide"><a href="#phpdata"><img src="../images/trend/cmf_01.png" alt=""></a></li>
-                                <li class="swiper-slide"><a href="#phpdata"><img src="../images/trend/cmf_02.png" alt=""></a></li>
-                                <li class="swiper-slide"><a href="#phpdata"><img src="../images/trend/cmf_03.png" alt=""></a></li>
-                                <li class="swiper-slide"><a href="#phpdata"><img src="../images/trend/mood_01.png" alt=""></a></li>
-                                <li class="swiper-slide"><a href="#phpdata"><img src="../images/trend/mood_02.png" alt=""></a></li>
-                                <li class="swiper-slide"><a href="#phpdata"><img src="../images/trend/mood_03.png" alt=""></a></li>
+                                <li class="swiper-slide"><a href="#phpdata"><img loading="lazy" src="../images/trend/cmf_01.png" alt=""></a></li>
+                                <li class="swiper-slide"><a href="#phpdata"><img loading="lazy" src="../images/trend/cmf_02.png" alt=""></a></li>
+                                <li class="swiper-slide"><a href="#phpdata"><img loading="lazy" src="../images/trend/cmf_03.png" alt=""></a></li>
+                                <li class="swiper-slide"><a href="#phpdata"><img loading="lazy" src="../images/trend/mood_01.png" alt=""></a></li>
+                                <li class="swiper-slide"><a href="#phpdata"><img loading="lazy" src="../images/trend/mood_02.png" alt=""></a></li>
+                                <li class="swiper-slide"><a href="#phpdata"><img loading="lazy" src="../images/trend/mood_03.png" alt=""></a></li>
                             </ul>
                             <dl>
                                 <dt>
@@ -360,7 +360,7 @@ include "../../include/dbconn.html";
         })
         $('#my_library .selected_tab a').on('click',function(){
             let idx = $(this).index();
-            console.log(idx);
+            // console.log(idx);
             $('#my_library .selected_tab a').removeClass('active');
             $(this).addClass('active');
 
