--- a/kor/cmf_library/detail.html
+++ b/kor/cmf_library/detail.html
@@ -1,1 +1,370 @@
-<!-- del -->
+<?
+session_start();
+include "../../include/dbconn.html";
+
+?>
+<!DOCTYPE html>
+
+<html lang="ko">
+
+<meta charset="UTF-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+<!-- --------------------SEO-------------------- -->
+<link rel="canonical" href="Canonical URL">
+<link rel="icon" href="../../favicon.ico" type="image/x-icon">
+
+<meta name="author" content="piajj">
+<meta name="description" content="hida, Innovative CMF(Color Material Finish) Design Lab, product design, industrial design, 히다 CMF디자인, 히다랩">
+<meta name="keyword" content="color, material, finish, design, technology, surface, texture, pattern, decoration, product, packaging, plate, nameplate, case, bottle, cosmetic, makeup, trend, fashion, pantone, consulting, manufacturing, production">
+
+<meta property="og:type" content="website">
+<meta property="og:locale" content="ko_KR">
+<meta property="og:url" content="https://www.hidalab.com/">
+<meta property="og:image" content="https://www.hidalab.com/images/contents/og_title2.png">
+<meta property="og:title" content="hida - Color Material Finish specialists (히다랩)">
+<meta property="og:description" content="hida, Innovative CMF(Color Material Finish) Design Lab, product design, industrial design, 히다 CMF디자인, 히다랩">
+
+
+<meta name="twitter:card" content="photo">
+<meta name="twitter:title" content="hida - Color Material Finish specialists (히다랩)">
+<meta name="twitter:url" content="https://www.hidalab.com//">
+<meta name="twitter:image" content="https://www.hidalab.com//images/contents/og_title2.png">
+<meta name="twitter:description" content="hida, Innovative CMF(Color Material Finish) Design Lab, product design, industrial design, 히다 CMF디자인, 히다랩">
+<!-- --------------------SEO-------------------- -->
+
+<title>hida - Color Material Finish specialists (히다랩)</title>
+
+
+
+<!-- --------------------CSS-------------------- -->
+<link rel="stylesheet" href="../css/swiper.css">
+<link rel="stylesheet" href="../css/aos.css">
+<link rel="stylesheet" href="../css/jquery.fullpage.min.css">
+<link rel="stylesheet" href="../css/nice-select.css">
+<link rel="stylesheet" href="../css/style.css">
+<link rel="stylesheet" href="../css/media.css">
+<!-- --------------------CSS-------------------- -->
+
+
+<!-- --------------------Script-------------------- -->
+<script src="../js/jquery.js"></script>
+<script src="../js/swiper.js"></script>
+<script src="../js/aos.js"></script>
+<script src="../js/fullpage.min.js"></script>
+<script src="../js/nice-select-min.js"></script>
+<script src="../js/gsap.min.js"></script>
+<script src="../js/ScrollTrigger.min.js"></script>
+<!-- --------------------Script-------------------- -->
+</head>
+
+
+<body>
+
+    <header id="header">
+        <nav id="header_wrap">
+
+            <!-- HEADER_LEFT -->
+            <h1 id="header_left">
+                <a href="../main/index.html"><img src="../images/common/logo_01.svg" alt="회사 로고"></a>
+            </h1>
+
+            <!-- HEADER_CENTER -->
+            <ul id="header_center">
+
+                <li><a href="../cmf_library/list.html">CMF Library</a></li>
+                <li><a href="../trend_library/list.html">Trend Library</a></li>
+                <li><a href="../category/list.html">Category</a></li>
+                <li><a href="../portfolio/list.html">Portfolio</a></li>
+                <li><a href="../contact/inquiry.html">Contact</a></li>
+            </ul>
+
+
+            <ul id="header_right">
+                <? if (!$_SESSION['f_email']) { ?>
+                    <li><a href="../member/login.html">Log in</a></li>
+                    <li><a href="../member/join.html">Join for free</a></li>
+                <? } else { ?>
+                    <!-- <li><a href="../member/db_exec.html?mode=logout">로그아웃</a></li> -->
+                    <!-- <li><a href="../member/mypage.html">마이페이지</a></li> -->
+                <? } ?>
+            </ul>
+
+            <div id="header_ham">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
+
+            <div id="header_full">
+                <article>
+                    <nav class="status">
+                        <a href="../member/login.html">
+                            <img src="../images/common/ico_login_01.svg" alt="">Log in
+                        </a>
+                    </nav>
+                    <nav class="menu">
+                        <ul class="depth_01">
+                            <li><a href="../cmf_library/list.html">CMF Library</a></li>
+                            <li><a href="../trend_library/list.html">Trend Library</a></li>
+                            <li><a href="../category/list.html">Category</a></li>
+                            <li><a href="../portfolio/list.html">Portfolio</a></li>
+                            <li><a href="../contact/inquiry.html">Contact</a></li>
+                        </ul>
+                        <ul class="user_depth">
+                            <li><a href="">My account</a></li>
+                            <li><a href="">Log out</a></li>
+                        </ul>
+                    </nav>
+                </article>
+            </div>
+        </nav>
+    </header>
+
+    <main class="sub_page detail" id="portfolio">
+        <section>
+            <article class="fixed">
+                <div class="product_detail">
+                    <div class="product_thumb">
+
+                        <a id="backNavi" href="javascript:;" onclick="history.back()"><img src="../images/common/ico_arrow_05.svg" alt="move to prev page"></a>
+
+                        <div thumbsSlider="" class="thumb_big swiper-container">
+                            <ul class="swiper-wrapper">
+                                <li class="swiper-slide"><img src="../images/portfolio/image 29.png" alt=""></li>
+                                <li class="swiper-slide"><img src="../images/portfolio/image 48.png" alt=""></li>
+                                <li class="swiper-slide"><img src="../images/portfolio/image 49.png" alt=""></li>
+                                <li class="swiper-slide"><img src="../images/portfolio/image 50.png" alt=""></li>
+                            </ul>
+                        </div>
+
+                        <div class="thumb_small">
+
+                            <div thumbsSlider="" class="swiper-container">
+                                <ul class="swiper-wrapper">
+                                    <li class="swiper-slide"><img src="../images/portfolio/image 29.png" alt=""></li>
+                                    <li class="swiper-slide"><img src="../images/portfolio/image 48.png" alt=""></li>
+                                    <li class="swiper-slide"><img src="../images/portfolio/image 49.png" alt=""></li>
+                                    <li class="swiper-slide"><img src="../images/portfolio/image 50.png" alt=""></li>
+                                </ul>
+                            </div>
+                            <!-- 
+                            <div class="swiper-navi-wrap">
+                                <div class="swiper-button-next"></div>
+                                <div class="swiper-button-prev"></div>
+                            </div> -->
+                        </div>
+                    </div>
+                </div>
+            </article>
+
+            <article class="fixed_margin">
+
+                <!-- 
+                            .board_wrap {
+                                board로 감싼 a
+                                dd > p.board_wrap > a
+                            }
+                            .line_wrap {
+                                line 감싼 a
+                                dd > p.line_wrap > a
+                            }
+                        -->
+                <div class="product_info">
+                    <h2>Specifications</h2>
+                    <div class="info_wrap">
+                        <dl>
+                            <dt>Project</dt>
+                            <dd>
+                                YSL Over rose collecter 22’
+                            </dd>
+                        </dl>
+                        <dl>
+                            <dt>Company</dt>
+                            <dd>
+                                110(W)*50(L)*10(H)mm / 120g
+                            </dd>
+                        </dl>
+                        <dl>
+                            <dt>Launching</dt>
+                            <dd>
+                                2022. 11
+                            </dd>
+                        </dl>
+                        <dl>
+                            <dt>개발범위</dt>
+                            <dd>
+                                3 months
+                            </dd>
+                        </dl>
+                        <dl>
+                            <dt>개발기간</dt>
+                            <dd>
+                                3 months
+                            </dd>
+                        </dl>
+                        <dl>
+                            <dt>Link</dt>
+                            <dd>
+                                https://www.hidalab.com/
+                            </dd>
+                        </dl>
+                    </div>
+
+                    <div class="comment_wrap">
+                        Are you a coffee lover? Coffee is a beverage that many people enjoy. On a gloomy morning, it serves to wake up your body, and
+                        on a drowsy afternoon, it helps to relax your mind. There are circumstances when it serves as a medium for creating a pleasant
+                        environment for people. In these situations, it seems obvious that we're close to coffee, but we're not able to think about the
+                        grounds that remain after the extraction of the coffee. We can expect coffee grounds to be reborn as a useful resource in the
+                        future instead of being discarded as household waste in Korea, as coffee grounds have already been identified as a circulating
+                        resource since March, and we can expect them to become a valuable resource. Read hïda's October newsletter for amazing
+                        insights and creative ideas on how to use grounds that are hidden by aromatic coffee.
+
+                        Are you a coffee lover? Coffee is a beverage that many people enjoy. On a gloomy morning, it serves to wake up your body, and
+                        on a drowsy afternoon, it helps to relax your mind. There are circumstances when it serves as a medium for creating a pleasant
+                        environment for people. In these situations,
+
+                        it seems obvious that we're close to coffee, but we're not able to think about the
+                        grounds that remain after the extraction of the coffee. We can expect coffee grounds to be reborn as a useful resource in the
+                        future instead of being discarded as household waste in Korea, as coffee grounds have already been identified as a circulating
+                        resource since March, and we can expect them to become a valuable resource. Read hïda's October newsletter for amazing
+                        insights and creative ideas on how to use grounds that are hidden by aromatic coffee.
+                    </div>
+
+                </div>
+
+                <div class="related cmfs">
+                    <h2>Related CMFs</h2>
+                    <ul>
+                        <li>
+                            <a href="">
+                                <figure>
+                                    <div class="img_wrap">
+                                        <img src="../images/cmf/image 34.png" alt="">
+                                        <img src="../images/common/prod_bg.png" alt="" class="prod_thumb_bg">
+                                    </div>
+                                </figure>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="">
+                                <figure>
+                                    <div class="img_wrap">
+                                        <img src="../images/cmf/image 35.png" alt="">
+                                        <img src="../images/common/prod_bg.png" alt="" class="prod_thumb_bg">
+                                    </div>
+                                </figure>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="">
+                                <figure>
+                                    <div class="img_wrap">
+                                        <img src="../images/cmf/image 36.png" alt="">
+                                        <img src="../images/common/prod_bg.png" alt="" class="prod_thumb_bg">
+                                    </div>
+                                </figure>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="">
+                                <figure>
+                                    <div class="img_wrap">
+                                        <img src="../images/cmf/image 37.png" alt="">
+                                        <img src="../images/common/prod_bg.png" alt="" class="prod_thumb_bg">
+                                    </div>
+                                </figure>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="">
+                                <figure>
+                                    <div class="img_wrap">
+                                        <img src="../images/cmf/image 38.png" alt="">
+                                        <img src="../images/common/prod_bg.png" alt="" class="prod_thumb_bg">
+                                    </div>
+                                </figure>
+                            </a>
+                        </li>
+                        <li class="more box">
+                            <a href="">
+                                <figure>
+                                    <figcaption>
+                                        find out
+                                        <br>
+                                        more
+                                    </figcaption>
+                                    <img src="../images/common/ico_arrow_07.svg" alt="">
+                                </figure>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </article>
+        </section>
+
+    </main>
+
+
+
+    <footer id="footer" class="noMargin">
+        <article>
+            <div class="info_01">
+                <nav>
+                    <h2>
+                        Receive free monthly
+                        <br class="pc_only">
+                        CMF newsletter on various
+                        <br class="pc_only">
+                        trending CMFs in the world.
+                    </h2>
+                </nav>
+                <nav>
+                    <form>
+                        <input type="email" name="" placeholder="Email Address" required>
+                        <input type="submit" value="Subscribe">
+                    </form>
+                    <ul>
+                        <li>
+                            <a href="#none">About us</a>
+                            <a href="#none">Privacy policy</a>
+                            <a href="#none">News</a>
+                            <a href="#none">Terms & Conditions</a>
+                            <a href="#none">Event</a>
+                            <a href="#none">Contact</a>
+                        </li>
+                    </ul>
+
+                </nav>
+
+            </div>
+
+            <div class="info_02">
+                <nav>
+                    <a href="mailTo:hida@hidalab.com">hida@hidalab.com</a>
+                </nav>
+                <nav>
+                    <p>hida, a part of Intops</p>
+                    <p><a href="">51, Anyangcheonseo-Ro, Manan-Gu, Anyang-Si, Gyeonggi-Do, 14088 South Korea</a></p>
+                    <p><a href="">Tel. +82 31 441 4181</a></p>
+                </nav>
+            </div>
+            <div class="bar"></div>
+
+            <div class="info_03">
+                <p>© 2020-2022. hida, a part of Intops. All rights reserved.</p>
+                <select class="nice">
+                    <option value="">Family Site</option>
+                </select>
+
+            </div>
+
+
+        </article>
+    </footer>
+
+    <script src="../js/index.js"></script>
+</body>
+
+</html>
